testsuite/good/VariableType.flux
type VariableType{

}
attributes{
    var int a = 10;
    var int b;
    int c = 30;

}