testsuite/bad/InterfaceContainingAssignment.flux
type InterfaceContainingAssignment{
    int a = 1;
}